# 20--bom---

./: .gitignore  BOM成本查询_2026041415170958.xlsx  CLAUDE.md  run.ps1
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes_dataset.py  routes_export.py  routes_import.py
backend/app/core/: dataset_store.py
backend/app/schemas/: dataset_models.py  error_models.py  query_models.py
backend/app/services/: aggregate_service.py  anomaly_service.py  export_service.py  import_service.py  index_service.py  parse_service.py  query_service.py
backend/app/utils/: level_parser.py
backend/app/validators/: workbook_validator.py
backend/tests/api/: test_dataset_api.py  test_export_api.py  test_where_used_api.py
backend/tests/services/: test_anomaly_service.py  test_export_service.py  test_import_service.py  test_index_service.py  test_parse_service.py  test_query_service.py
backend/tests/validators/: test_workbook_validator.py
docs/superpowers/plans/: 2026-04-14-bom-local-analysis-tool.md  2026-04-14-frontend-visual-enhancement.md  2026-04-15-bom-table-enhancement.md  2026-04-21-web-bom-viewer-upgrade-implementation.md
docs/superpowers/specs/: 2026-04-14-bom-local-analysis-tool-design.md  2026-04-15-bom-table-enhancement-design.md  2026-04-21-web-bom-viewer-upgrade-prd.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: bom-upload-and-filter.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.vue  main.ts
frontend/src/api/: dataset.ts  (+1 more)
(+38 files in other folders)
